<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

   <!--<ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/darthvader" />-->

   <TextView
       android:id="@+id/Cadastrar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableTop="@drawable/batman"
       android:text="@string/cadastrar"
       android:textAlignment="center"
       android:layout_marginLeft="30dp"
       android:layout_marginTop="80dp" />

   <TextView
       android:id="@+id/iconListar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableTop="@drawable/darthvader"
       android:text="@string/listar"
       android:textAlignment="center"
       android:layout_alignParentRight="true"
       android:layout_alignTop="@id/Cadastrar"
       android:layout_marginRight="30dp" />

   <TextView
       android:id="@+id/iconEditar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableTop="@drawable/ironman"
       android:text="@string/editar"
       android:textAlignment="center"
       android:layout_alignParentBottom="true"
       android:layout_alignLeft="@id/Cadastrar"
       android:layout_marginBottom="80dp" />

   <TextView
       android:id="@+id/iconConfig"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableTop="@drawable/luffy"
       android:text="@string/configuracoes"
       android:textAlignment="center"
       android:layout_alignRight="@+id/iconListar"
       android:layout_alignBottom="@id/iconEditar" />




</RelativeLayout>